# tutorial-pybr

./: LICENSE  pyproject.toml
.github/workflows/: main.yml
api_pedidos/: api.py  esquema.py  magalu_api.py
tests/: test_api.py
