[tool.poetry]
name = "luizalabstutorial"
version = "0.1.0"
description = ""
authors = ["bruna_braga <bruna.braga@estantemagica.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
httpx = "^0.20.0"

[tool.poetry.dev-dependencies]
httpie = "^2.6.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
